--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "rootDir": ".",
     "outDir": "dist",
-    "esModuleInterop": true,
+    "rootDir": ".",
     "strict": true,
-    "skipLibCheck": true
-  }
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+  },
+  "exclude": ["node_modules", "dist"]
 }
