--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Food ordering website inspire zomato swiggy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
+    "build": "tsc",
     "start": "node dist/server.js"
   },
   "author": "javid shabin",
