--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -36,6 +37,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.29",
     "@types/nodemailer": "^6.4.17",
+    "@types/stripe": "^8.0.416",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
